includes_es translations

--- a/includes_es/dialysis-subnav.html
+++ b/includes_es/dialysis-subnav.html
@@ -1,17 +1,16 @@
-<nav class="sub-nav js-active-nav" aria-label="Dialysis navigation">
-  <a href="/hub/dialysis/index.html">Overview</a>
+<nav class="sub-nav js-active-nav" aria-label="Navegación de diálisis">
+  <a href="/es/hub/dialysis/index.html">Descripción general</a>
   <span class="pipe">|</span>
-  <a href="/hub/dialysis/staff/index.html" data-prefix="/hub/dialysis/staff/">Staff &amp; Roles</a>
+  <a href="/es/hub/dialysis/staff/index.html" data-prefix="/es/hub/dialysis/staff/">Personal y funciones</a>
   <span class="pipe">|</span>
-  <a href="/hub/dialysis/access.html">Access Options</a>
+  <a href="/es/hub/dialysis/access.html">Opciones de acceso</a>
   <span class="pipe">|</span>
-  <a href="/hub/dialysis/machine.html">The Machine</a>
+  <a href="/es/hub/dialysis/machine.html">La máquina</a>
   <span class="pipe">|</span>
-  <a href="/hub/dialysis/schedule.html">Schedule</a>
+  <a href="/es/hub/dialysis/schedule.html">Horario</a>
   <span class="pipe">|</span>
-  <a href="/hub/dialysis/expectations.html">What to Expect</a>
+  <a href="/es/hub/dialysis/expectations.html">Qué esperar</a>
   <span class="pipe">|</span>
-  <a href="/hub/dialysis/side-effects.html">Side Effects</a>
+  <a href="/es/hub/dialysis/side-effects.html">Efectos secundarios</a>
 </nav>
-
 
