--- a/includes_es/donation-subnav.html
+++ b/includes_es/donation-subnav.html
@@ -1,14 +1,15 @@
-<nav class="sub-nav js-active-nav" aria-label="Donation navigation">
-  <a href="/hub/donation/index.html" data-prefix="/hub/donation/">Overview</a>
+<nav class="sub-nav js-active-nav" aria-label="Navegación de donación">
+  <a href="/es/hub/donation/index.html" data-prefix="/es/hub/donation/">Descripción general</a>
   <span class="pipe">|</span>
-  <a href="/hub/donation/who-can-donate.html">Who Can Donate?</a>
+  <a href="/es/hub/donation/who-can-donate.html">¿Quién puede donar?</a>
   <span class="pipe">|</span>
-  <a href="/hub/donation/testing.html">Evaluation &amp; Testing</a>
+  <a href="/es/hub/donation/testing.html">Evaluación y pruebas</a>
   <span class="pipe">|</span>
-  <a href="/hub/donation/risks.html">Risks</a>
+  <a href="/es/hub/donation/risks.html">Riesgos</a>
   <span class="pipe">|</span>
-  <a href="/hub/donation/recovery.html">Recovery</a>
+  <a href="/es/hub/donation/recovery.html">Recuperación</a>
   <span class="pipe">|</span>
-  <a href="/hub/donation/life-after.html">Life After Donation</a>
+  <a href="/es/hub/donation/life-after.html">Vida después de la donación</a>
 </nav>
+
 
