--- a/includes_es/footer.html
+++ b/includes_es/footer.html
@@ -1,26 +1,24 @@
-
-
 <div class="disclaimer">
-  <strong>Disclaimer:</strong> The information on this site is based on personal
-  experience and research. It is for general educational purposes only and is 
-  not a substitute for professional medical advice. Always consult your 
-  healthcare provider for medical guidance.
+  <strong>Descargo de responsabilidad:</strong> La información de este sitio se basa en
+  experiencia personal e investigación. Tiene fines educativos generales y no
+  sustituye el consejo médico profesional. Consulte siempre a su proveedor de
+  atención médica para recibir orientación médica.
 </div>
 
 <div class="cta-strip">
-  <a class="button button--primary button--lg" href="/book.html">
-    <i data-feather="book-open" aria-hidden="true"></i> Buy the Book
+  <a class="button button--primary button--lg" href="/es/book.html">
+    <i data-feather="book-open" aria-hidden="true"></i> Comprar el libro
   </a>
   <a class="button button--secondary button--lg" href="https://ko-fi.com/titoneedsakidney">
-    <i data-feather="heart" aria-hidden="true"></i> Support on Ko-fi
+    <i data-feather="heart" aria-hidden="true"></i> Apoyar en Ko-fi
   </a>
-  <a class="button button--ghost button--lg" href="/start-here.html">
-    <i data-feather="compass" aria-hidden="true"></i> Start Here
+  <a class="button button--ghost button--lg" href="/es/start-here.html">
+    <i data-feather="compass" aria-hidden="true"></i> Comienza aquí
   </a>
 </div>
 
 <footer>
-  <p>&copy; 2025 Tito. All rights reserved.</p>
+  <p>&copy; 2025 Tito. Todos los derechos reservados.</p>
 </footer>
 
 <script src="https://unpkg.com/feather-icons"></script>
