--- a/includes_es/header.html
+++ b/includes_es/header.html
@@ -1,17 +1,15 @@
-
-
 <header>
-<a class="skip-link" href="#main">Skip to content</a>
+  <a class="skip-link" href="#main">Saltar al contenido</a>
 
-  <h1>Tito Needs a Kidney</h1>
+  <h1>Tito necesita un riñón</h1>
   <nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About Me</a>
-    <a href="/hub/index.html">Kidney Hub</a>
-    <a href="/donor-info.html">Donor Info</a>
-    <a href="/donor-testimonials.html">Donor Testimonials</a>
-    <a href="/book.html">Book</a>
-    
+    <a href="/es/index.html">Inicio</a>
+    <a href="/es/about.html">Sobre mí</a>
+    <a href="/es/hub/index.html">Centro renal</a>
+    <a href="/es/donor-info.html">Información para donantes</a>
+    <a href="/es/donor-testimonials.html">Testimonios de donantes</a>
+    <a href="/es/book.html">Libro</a>
   </nav>
-  <div data-include="/includes/analytics.html"></div>
+
 </header>
+
