--- a/includes_es/meta.html
+++ b/includes_es/meta.html
@@ -2,11 +2,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#b24c63" />
 
-<!-- Per-page <title> and <meta name="description"> can still be set above this include -->
-<meta property="og:site_name" content="Tito Needs a Kidney" />
+<!-- El <title> y la <meta name="description"> por página se pueden definir arriba de este include -->
+<meta property="og:site_name" content="Tito Necesita un Riñón" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="/assets/images/og-default.png" />
-<meta property="og:image:alt" content="Cover of 'Tito Needs a Kidney' with the tagline: clear kidney care guides." />
+<meta property="og:image:alt" content="Portada de 'Tito Necesita un Riñón' con el lema: guías claras sobre cuidado renal." />
 
 <script>
 (function () {
@@ -14,9 +14,9 @@
   const canon = document.querySelector('link[rel="canonical"]') || document.head.appendChild(document.createElement('link'));
   canon.rel = 'canonical'; canon.href = location.origin + path;
 
-  const title = document.title || 'Tito Needs a Kidney';
+  const title = document.title || 'Tito Necesita un Riñón';
   const descTag = document.querySelector('meta[name="description"]');
-  const desc = descTag ? descTag.content : 'Clear, no-fluff guides on dialysis, transplant, and living donation.';
+  const desc = descTag ? descTag.content : 'Guías claras y directas sobre diálisis, trasplante y donación en vida.';
 
   const set = (p, v) => {
     let m = document.querySelector(`meta[property="${p}"]`) || document.head.appendChild(document.createElement('meta'));
@@ -29,3 +29,4 @@
 </script>
 
 <script src="/assets/js/hreflang.js" defer></script>
+
