--- a/includes_es/transplant-postop-staff-subnav.html
+++ b/includes_es/transplant-postop-staff-subnav.html
@@ -1,8 +1,9 @@
-<nav class="sub-nav js-active-nav" aria-label="Post-Op staff">
-  <a href="/hub/transplant/postop/staff/" data-prefix="/hub/transplant/postop/staff/">Overview</a>
-  <span class="pipe">|</span><a href="/hub/transplant/postop/staff/nephrologist.html">Nephrologist</a>
-  <span class="pipe">|</span><a href="/hub/transplant/postop/staff/pharmacist.html">Pharmacist</a>
-  <span class="pipe">|</span><a href="/hub/transplant/postop/staff/nurse-coordinator.html">Nurse Coordinator</a>
-  <span class="pipe">|</span><a href="/hub/transplant/postop/staff/dietitian.html">Dietitian</a>
-  <span class="pipe">|</span><a href="/hub/transplant/postop/staff/social-worker.html">Social Worker</a>
+<nav class="sub-nav js-active-nav" aria-label="Personal posoperatorio">
+  <a href="/es/hub/transplant/postop/staff/" data-prefix="/es/hub/transplant/postop/staff/">Descripción general</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/postop/staff/nephrologist.html">Nefrólogo/a</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/postop/staff/pharmacist.html">Farmacéutico/a</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/postop/staff/nurse-coordinator.html">Coordinador/a de enfermería</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/postop/staff/dietitian.html">Dietista/Nutricionista</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/postop/staff/social-worker.html">Trabajador/a social</a>
 </nav>
+
