--- a/includes_es/transplant-postop-subnav.html
+++ b/includes_es/transplant-postop-subnav.html
@@ -1,11 +1,12 @@
-<nav class="sub-nav js-active-nav" aria-label="Post-Op">
-  <a href="/hub/transplant/postop/" data-prefix="/hub/transplant/postop/">Overview</a>
+<nav class="sub-nav js-active-nav" aria-label="Posoperatorio">
+  <a href="/es/hub/transplant/postop/" data-prefix="/es/hub/transplant/postop/">Descripción general</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/postop/recovery.html">Recovery</a>
+  <a href="/es/hub/transplant/postop/recovery.html">Recuperación</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/postop/complications.html">Complications</a>
+  <a href="/es/hub/transplant/postop/complications.html">Complicaciones</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/postop/life-after.html">Life After</a>
+  <a href="/es/hub/transplant/postop/life-after.html">Vida después</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/postop/staff/" data-prefix="/hub/transplant/postop/staff/">Staff</a>
+  <a href="/es/hub/transplant/postop/staff/" data-prefix="/es/hub/transplant/postop/staff/">Personal</a>
 </nav>
+
