--- a/includes_es/transplant-preop-subnav.html
+++ b/includes_es/transplant-preop-subnav.html
@@ -1,11 +1,12 @@
-<nav class="sub-nav js-active-nav" aria-label="Pre-Op">
-  <a href="/hub/transplant/preop/" data-prefix="/hub/transplant/preop/">Overview</a>
+<nav class="sub-nav js-active-nav" aria-label="Preoperatorio">
+  <a href="/es/hub/transplant/preop/" data-prefix="/es/hub/transplant/preop/">Descripción general</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/preop/evaluation.html">Evaluation</a>
+  <a href="/es/hub/transplant/preop/evaluation.html">Evaluación</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/preop/matching.html">Matching</a>
+  <a href="/es/hub/transplant/preop/matching.html">Compatibilidad</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/preop/risks.html">Risks</a>
+  <a href="/es/hub/transplant/preop/risks.html">Riesgos</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/preop/staff/" data-prefix="/hub/transplant/preop/staff/">Staff</a>
+  <a href="/es/hub/transplant/preop/staff/" data-prefix="/es/hub/transplant/preop/staff/">Personal</a>
 </nav>
+
