--- a/includes_es/transplant-surgery-staff-subnav.html
+++ b/includes_es/transplant-surgery-staff-subnav.html
@@ -1,10 +1,11 @@
-<nav class="sub-nav js-active-nav" aria-label="Surgery staff">
-  <a href="/hub/transplant/surgery/staff/" data-prefix="/hub/transplant/surgery/staff/">Overview</a>
-  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/surgeon.html">Surgeon</a>
-  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/anesthesia.html">Anesthesiologist</a>
-  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/or-nurse.html">OR Nurse</a>
-  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/pacu-nurse.html">PACU/Inpatient Nurse</a>
-  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/inpatient-nurse.html">Inpatient/Transplant Unit Nurse</a>
-  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/inpatient-tech.html">Inpatient Tech (PCT/CNA)</a>
-  <span class="pipe">|</span><a href="/hub/transplant/surgery/staff/physical-therapist.html">Physical Therapist</a>
+<nav class="sub-nav js-active-nav" aria-label="Personal de cirugía">
+  <a href="/es/hub/transplant/surgery/staff/" data-prefix="/es/hub/transplant/surgery/staff/">Descripción general</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/surgery/staff/surgeon.html">Cirujano/a</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/surgery/staff/anesthesia.html">Anestesiólogo/a</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/surgery/staff/or-nurse.html">Enfermero/a de quirófano</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/surgery/staff/pacu-nurse.html">Enfermero/a PACU / hospitalización</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/surgery/staff/inpatient-nurse.html">Enfermero/a de hospitalización / unidad de trasplante</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/surgery/staff/inpatient-tech.html">Técnico/a de hospitalización (PCT/CNA)</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/surgery/staff/physical-therapist.html">Fisioterapeuta</a>
 </nav>
+
