--- a/includes_es/cta-strip.html
+++ b/includes_es/cta-strip.html
@@ -1,20 +1,15 @@
 <div class="cta-strip" data-loc="footer-cta">
   <a class="button button--primary button--lg"
-     href="/book/index.html"
+     href="/es/book.html"
      data-evt="book">
-    <i data-feather="book-open" aria-hidden="true"></i> Buy the Book
+    <i data-feather="book-open" aria-hidden="true"></i> Comprar el libro
   </a>
 
   <a class="button button--secondary button--lg"
      href="https://ko-fi.com/titoneedsakidney"
      data-evt="kofi">
-    <i data-feather="heart" aria-hidden="true"></i> Support on Ko-fi
-  </a>
-
-  <a class="button button--ghost button--lg"
-     href="/start-here.html"
-     data-evt="start-here">
-    <i data-feather="compass" aria-hidden="true"></i> Start Here
+    <i data-feather="heart" aria-hidden="true"></i> Apoyar en Ko-fi
   </a>
 </div>
+
 
