--- a/includes_es/transplant-preop-staff-subnav.html
+++ b/includes_es/transplant-preop-staff-subnav.html
@@ -1,8 +1,9 @@
-<nav class="sub-nav js-active-nav" aria-label="Pre-Op staff">
-  <a href="/hub/transplant/preop/staff/" data-prefix="/hub/transplant/preop/staff/">Overview</a>
-  <span class="pipe">|</span><a href="/hub/transplant/preop/staff/coordinator.html">Coordinator</a>
-  <span class="pipe">|</span><a href="/hub/transplant/preop/staff/nephrologist.html">Nephrologist</a>
-  <span class="pipe">|</span><a href="/hub/transplant/preop/staff/surgeon.html">Surgeon</a>
-  <span class="pipe">|</span><a href="/hub/transplant/preop/staff/social-worker.html">Social Worker</a>
-  <span class="pipe">|</span><a href="/hub/transplant/preop/staff/financial-coordinator.html">Financial</a>
+<nav class="sub-nav js-active-nav" aria-label="Personal preoperatorio">
+  <a href="/es/hub/transplant/preop/staff/" data-prefix="/es/hub/transplant/preop/staff/">Descripción general</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/preop/staff/coordinator.html">Coordinador/a</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/preop/staff/nephrologist.html">Nefrólogo/a</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/preop/staff/surgeon.html">Cirujano/a</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/preop/staff/social-worker.html">Trabajador/a social</a>
+  <span class="pipe">|</span><a href="/es/hub/transplant/preop/staff/financial-coordinator.html">Coordinador/a financiero/a</a>
 </nav>
+
