--- a/includes_es/transplant-subnav.html
+++ b/includes_es/transplant-subnav.html
@@ -1,10 +1,10 @@
-<nav class="sub-nav js-active-nav" aria-label="Transplant sections">
-  <a href="/hub/transplant/" data-prefix="/hub/transplant/">Overview</a>
+<nav class="sub-nav js-active-nav" aria-label="Secciones de trasplante">
+  <a href="/es/hub/transplant/" data-prefix="/es/hub/transplant/">Descripción general</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/preop/" data-prefix="/hub/transplant/preop/">Pre-Op</a>
+  <a href="/es/hub/transplant/preop/" data-prefix="/es/hub/transplant/preop/">Preoperatorio</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/surgery/" data-prefix="/hub/transplant/surgery/">Surgery</a>
+  <a href="/es/hub/transplant/surgery/" data-prefix="/es/hub/transplant/surgery/">Cirugía</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/postop/" data-prefix="/hub/transplant/postop/">Post-Op</a>
+  <a href="/es/hub/transplant/postop/" data-prefix="/es/hub/transplant/postop/">Posoperatorio</a>
 </nav>
 
