--- a/includes_es/transplant-surgery-subnav.html
+++ b/includes_es/transplant-surgery-subnav.html
@@ -1,9 +1,10 @@
-<nav class="sub-nav js-active-nav" aria-label="Surgery">
-  <a href="/hub/transplant/surgery/" data-prefix="/hub/transplant/surgery/">Overview</a>
+<nav class="sub-nav js-active-nav" aria-label="Cirugía">
+  <a href="/es/hub/transplant/surgery/" data-prefix="/es/hub/transplant/surgery/">Descripción general</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/surgery/surgery.html">The Operation</a>
+  <a href="/es/hub/transplant/surgery/surgery.html">La operación</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/surgery/recovery-inpatient.html">Inpatient Recovery</a>
+  <a href="/es/hub/transplant/surgery/recovery-inpatient.html">Recuperación en hospitalización</a>
   <span class="pipe">|</span>
-  <a href="/hub/transplant/surgery/staff/" data-prefix="/hub/transplant/surgery/staff/">Staff</a>
+  <a href="/es/hub/transplant/surgery/staff/" data-prefix="/es/hub/transplant/surgery/staff/">Personal</a>
 </nav>
+
