--- a/es/about.html
+++ b/es/about.html
@@ -2,23 +2,22 @@
 <html lang="es">
 <head>
   <div data-include="/includes_es/meta.html"></div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>About Me - Tito Needs a Kidney</title>
+  <title>Sobre mí — Tito Necesita un Riñón</title>
 
   <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
@@ -27,49 +26,97 @@
 <body>
   <div data-include="/includes_es/header.html"></div>
 
-    <main class="content" id="main">
-    <h1>About Tito</h1>
+  <main class="content" id="main">
+    <h1>Sobre Tito</h1>
     
     <section class="callout">
       <p>
-        Hi, I’m Tito—a two-time kidney transplant recipient. I’ve been through dialysis,
-        surgeries, and the long road to recovery. This site is where I share what I wish
-        I had known: honest stories, helpful resources, and practical tips for navigating
-        kidney disease and transplant life.
+        Hola, soy Tito — receptor de dos trasplantes de riñón. He pasado por la diálisis,
+        varias cirugías y el largo camino de la recuperación. Este sitio es donde comparto
+        lo que me habría gustado saber: historias honestas, recursos útiles y consejos
+        prácticos para navegar la enfermedad renal y la vida con trasplante.
       </p>
     </section>
 
     <section>
-      <h2>My Journey</h2>
+      <h2>Mi recorrido</h2>
       <p>
-        My story started when I was diagnosed with kidney failure and began dialysis.
-        After two transplants and countless lessons along the way, I’ve learned how
-        important it is to have clear information and real support. This site combines
-        my personal experience with what I’ve learned from others in the kidney community.
+        Mi historia comenzó cuando me diagnosticaron insuficiencia renal y empecé diálisis.
+        Después de dos trasplantes y de incontables lecciones en el camino, aprendí lo
+        importante que es contar con información clara y apoyo real. Este sitio combina
+        mi experiencia personal con lo que he aprendido de otras personas en la comunidad renal.
       </p>
     </section>
 
     <section>
-      <h2>Why This Site Exists</h2>
+      <h2>Por qué existe este sitio</h2>
       <p>
-        When I was going through dialysis and transplant, I often felt overwhelmed and
-        alone. I created Tito Needs a Kidney to help others avoid that feeling—whether
-        you’re a patient, donor, or caregiver. Here you’ll find knowledge hubs,
-        testimonials, and step-by-step guides designed to make a tough journey
-        a little easier.
+        Cuando atravesaba la diálisis y el trasplante, a menudo me sentía abrumado y solo.
+        Creé Tito Necesita un Riñón para ayudar a otros a evitar esa sensación —seas paciente,
+        donante o cuidador/a. Aquí encontrarás secciones de conocimiento, testimonios y guías
+        paso a paso diseñadas para hacer un camino difícil un poco más llevadero.
       </p>
     </section>
 
     <section>
-      <h2>Want the Full Story?</h2>
+      <h2>¿Quieres la historia completa?</h2>
       <p>
-        My book <em>"Tito Needs a Kidney"</em> goes deeper into the ups and downs of my
-        experience—from life on dialysis to finally getting a transplant.
+        Mi libro <em>“Tito Necesita un Riñón”</em> profundiza en los altibajos de mi experiencia:
+        desde la vida en diálisis hasta finalmente recibir un trasplante.
       </p>
-      <a href="/es/book.html" class="button">📖 Read the Book</a>
+      <a href="/es/book.html" class="button">📖 Leer el libro</a>
     </section>
   </main>
+  
+  <section id="compartir-historia" class="contact callout">
+  <h2>Comparte tu historia</h2>
+  <p>
+    ¿Eres donante, receptor/a o cuidador/a? Tu experiencia puede ayudar a otras personas.
+    Envíame un correo con un breve resumen y, si quieres, una foto.
+  </p>
+
+  <div class="stack">
+    <a id="email-share" class="button button--primary">✉️ Enviar por correo</a>
+    <details>
+      <summary>Qué incluir (guía rápida)</summary>
+      <ul>
+        <li>Nombre y cómo quieres que aparezca (nombre completo, iniciales o anónimo)</li>
+        <li>Relación: donante / receptor/a / cuidador/a</li>
+        <li>Ciudad y país (opcional)</li>
+        <li>Tu historia en 3–5 frases</li>
+        <li>¿Podemos publicar tu nombre? Sí/No</li>
+        <li>Foto(s) opcional(es)</li>
+      </ul>
+      <p class="muted">Al enviar tu historia, confirmas que tienes permiso para compartir el contenido y que aceptas su posible edición por claridad y extensión.</p>
+    </details>
+  </div>
+
+  <script>
+  (function(){
+    // 👉 Cambia esta dirección si usas otra
+    var email = 'tito' + '@' + 'discoverflx.wine';
+
+    var subj = encodeURIComponent('Quiero compartir mi historia (donación/diálisis/trasplante)');
+    var body = encodeURIComponent(
+      'Nombre (y cómo mostrarlo):\n' +
+      'Relación (donante/receptor/a/cuidador/a):\n' +
+      'Ciudad/país (opcional):\n' +
+      'Historia (3–5 frases):\n' +
+      '¿Podemos publicar tu nombre? (Sí/No):\n'
+    );
+
+    var a = document.getElementById('email-share');
+    if (a) {
+      a.href = 'mailto:' + email + '?subject=' + subj + '&body=' + body;
+      a.setAttribute('aria-label', 'Enviar correo a ' + email);
+    }
+  })();
+  </script>
+</section>
+
+
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
