--- a/es/donor-info.html
+++ b/es/donor-info.html
@@ -2,22 +2,21 @@
 <html lang="es">
 <head>
   <div data-include="/includes_es/meta.html"></div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Donor Information | Tito Needs a Kidney</title>
-    <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Información para donantes | Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
@@ -26,84 +25,100 @@
   <div data-include="/includes_es/header.html"></div>
 
   <main class="content" id="main">
-  <div class="callout">
-  <p>
-    💡 <strong>Thinking about donating a kidney?</strong><br>
-    This page shares general information to help you understand the process. 
-    Every donor’s journey is unique, so be sure to speak with your transplant 
-    team for medical advice and guidance specific to you.
-  </p>
-</div>
-    <section id="life-expectancy">
-      <h2>Life Expectancy</h2>
+    <div class="callout">
       <p>
-        Donating a kidney is major surgery but has not been shown to reduce the donor’s life expectancy. Interestingly, people who have donated a kidney outlive the average person. 
+        💡 <strong>¿Estás pensando en donar un riñón?</strong><br>
+        Esta página comparte información general para ayudarte a entender el proceso.
+        Cada camino de donación es único, así que habla con tu equipo de trasplantes
+        para recibir orientación y recomendaciones médicas específicas para ti.
+      </p>
+    </div>
+
+    <section id="life-expectancy">
+      <h2>Esperanza de vida</h2>
+      <p>
+        Donar un riñón es una cirugía mayor, pero no se ha demostrado que reduzca la esperanza
+        de vida de la persona donante. Curiosamente, quienes donan un riñón viven más que el
+        promedio de la población.
         (<a href="https://journals.lww.com/transplantjournal/Fulltext/1997/10150/Living_donor_nephrectomy__renal_function_in_living.21.aspx" target="_blank">Fehrman-Ekholm, 1997</a>)
       </p>
       <p>
-        Some experts attribute this to selection bias—only healthy individuals are approved to donate. Others believe the positive emotional effects of donation may contribute to better health.
+        Algunos expertos atribuyen esto al sesgo de selección —solo se aprueba a personas sanas
+        para donar—. Otros creen que los efectos emocionales positivos de la donación pueden
+        contribuir a una mejor salud.
       </p>
     </section>
 
     <section id="surgical-complications">
-      <h2>Surgical Complications</h2>
+      <h2>Complicaciones quirúrgicas</h2>
       <p>
-        Donors may experience short-term post-operative issues such as bleeding, infection, or fever. These complications are usually minor and treated with standard medical care.
+        Las personas donantes pueden presentar problemas postoperatorios a corto plazo como
+        sangrado, infección o fiebre. Estas complicaciones suelen ser leves y se tratan con
+        atención médica estándar.
       </p>
     </section>
 
     <section id="recovery-time">
-      <h2>Recovery Time</h2>
+      <h2>Tiempo de recuperación</h2>
       <p>
-        Kidney removal is typically done laparoscopically. Most donors go home within 1–2 days and return to work in 1–4 weeks depending on their job. Non-laparoscopic surgery has a longer recovery.
+        La nefrectomía para donación generalmente se realiza por vía laparoscópica. La mayoría
+        de las personas donantes vuelven a casa en 1–2 días y regresan al trabajo en 1–4 semanas,
+        según el tipo de empleo. La cirugía no laparoscópica implica una recuperación más larga.
       </p>
     </section>
 
     <section id="mortality-rate">
-      <h2>Mortality Rate</h2>
+      <h2>Tasa de mortalidad</h2>
       <p>
-        The mortality rate for living kidney donation is 0.007%, or 7 deaths per 100,000 surgeries. For comparison, the U.S. infant mortality rate in 2019 was 558 per 100,000—80 times higher.
+        La tasa de mortalidad para la donación renal de donante vivo es del 0.007%,
+        es decir, 7 fallecimientos por cada 100,000 cirugías. Como referencia, la tasa
+        de mortalidad infantil en EE. UU. en 2019 fue de 558 por cada 100,000—80 veces mayor.
       </p>
       <p>
-        Risk may be lower at Donor Care Network Centers of Excellence.
+        El riesgo puede ser menor en los <em>Donor Care Network Centers of Excellence</em>.
       </p>
     </section>
 
     <section id="long-term-outcomes">
-      <h2>Long-Term Outcomes</h2>
+      <h2>Resultados a largo plazo</h2>
       <p>
-        Kidney donation does not reduce life expectancy, but research shows a small increase in lifetime kidney failure risk compared to healthy non-donors.
+        La donación de riñón no reduce la esperanza de vida, pero la investigación muestra
+        un pequeño aumento del riesgo de insuficiencia renal a lo largo de la vida en
+        comparación con personas sanas que no donan.
       </p>
       <ul>
-        <li>General population: 1 in 30</li>
-        <li>Donors: 1 in 110</li>
-        <li>Healthy non-donors: 1 in 700</li>
+        <li>Población general: 1 de cada 30</li>
+        <li>Donantes: 1 de cada 110</li>
+        <li>No donantes sanos: 1 de cada 700</li>
       </ul>
       <p>
-        The increased risk is due to the fact that donors only have one kidney—but the absolute risk remains low.
+        El aumento del riesgo se debe a que las personas donantes viven con un solo riñón,
+        pero el riesgo absoluto sigue siendo bajo.
       </p>
     </section>
 
     <section id="automatic-exclusions">
-      <h2>Automatic Exclusions</h2>
-      <p>Donors are typically excluded if they have:</p>
+      <h2>Exclusiones automáticas</h2>
+      <p>Generalmente se excluye a quien presente:</p>
       <ul>
         <li>Diabetes</li>
-        <li>Recent cancers (within 5 years)</li>
-        <li>Autoimmune disease</li>
-        <li>BMI over 35</li>
-        <li>Heart, liver, lung, or kidney disease</li>
-        <li>Uncontrolled hypertension</li>
-        <li>Active substance or alcohol abuse</li>
-        <li>Untreated mental health disorders</li>
-        <li>Chronic hepatitis B or C, or HIV</li>
+        <li>Cánceres recientes (últimos 5 años)</li>
+        <li>Enfermedades autoinmunes</li>
+        <li>IMC &gt; 35 (índice de masa corporal)</li>
+        <li>Enfermedad del corazón, hígado, pulmón o riñón</li>
+        <li>Hipertensión no controlada</li>
+        <li>Consumo problemático de sustancias o alcohol activo</li>
+        <li>Trastornos de salud mental no tratados</li>
+        <li>Hepatitis B o C crónica, o VIH</li>
       </ul>
     </section>
   </main>
 
   <footer>
-    <p><a href="index.html">← Back to Home</a></p>
+    <p><a href="/es/index.html">← Volver al inicio</a></p>
   </footer>
+
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
