--- a/es/book.html
+++ b/es/book.html
@@ -2,23 +2,22 @@
 <html lang="es">
 <head>
   <div data-include="/includes_es/meta.html"></div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Book - Tito Needs a Kidney</title>
+  <title>El libro — Tito Necesita un Riñón</title>
 
   <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
@@ -27,42 +26,46 @@
   <div data-include="/includes_es/header.html"></div>
 
   <main class="content" id="main">
-    <h1>Tito Needs a Kidney (The Book)</h1>
+    <h1>Tito Necesita un Riñón (El libro)</h1>
+
     <div class="callout">
-  <p>
-    📖 <strong>About This Book</strong><br>
-    <em>Tito Needs a Kidney</em> is a personal story of life on dialysis, 
-    navigating two kidney transplants, and the road to recovery. 
-    It’s meant to inform and inspire—not replace professional medical advice. 
-    Always talk with your healthcare team for medical decisions.
-  </p>
-</div>
+      <p>
+        📖 <strong>Acerca de este libro</strong><br>
+        <em>Tito Necesita un Riñón</em> es una historia personal sobre la vida en diálisis,
+        el recorrido por dos trasplantes renales y el camino de recuperación.
+        Busca informar e inspirar —no sustituye el consejo médico profesional—.
+        Consulta siempre a tu equipo de salud para tomar decisiones médicas.
+      </p>
+    </div>
 
-    <p><strong>“Tito Needs a Kidney”</strong> is a firsthand account of what it’s really like to survive kidney failure — told with clarity, honesty, and a refusal to sugarcoat what matters.</p>
+    <p><strong>“Tito Necesita un Riñón”</strong> es un relato en primera persona de lo que realmente implica sobrevivir a la insuficiencia renal: con claridad, honestidad y sin endulzar lo importante.</p>
 
-    <p>The book covers:
-      <ul>
-        <li>What dialysis actually feels like</li>
-        <li>What it means to lose your independence and fight to get it back</li>
-        <li>How transplant really works (and what people often get wrong)</li>
-        <li>Why the donor process is confusing — and how to make it better</li>
-        <li>How one guy navigated it all without giving up on living fully</li>
-      </ul>
+    <p><strong>El libro trata:</strong></p>
+    <ul>
+      <li>Cómo se siente realmente la diálisis</li>
+      <li>Qué significa perder la independencia y luchar para recuperarla</li>
+      <li>Cómo funciona de verdad el trasplante (y qué suele malinterpretarse)</li>
+      <li>Por qué el proceso para donantes puede ser confuso —y cómo mejorarlo</li>
+      <li>Cómo alguien navegó todo esto sin renunciar a vivir plenamente</li>
+    </ul>
+
+    <p><strong>Este libro es para:</strong></p>
+    <ul>
+      <li>Personas en diálisis o recién diagnosticadas con enfermedad renal</li>
+      <li>Donantes que quieren entender el panorama completo</li>
+      <li>Familias que desean ayudar pero no saben cómo</li>
+      <li>Quien necesite ver cómo se ve la esperanza en la práctica</li>
+    </ul>
+
+    <p><strong>Disponible en formatos tapa blanda y libro electrónico.</strong>
+      Visita tu librería de preferencia o
+      <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1"
+         target="_blank" rel="noopener">cómpralo en Amazon aquí</a>.
     </p>
-
-    <p>This book is for:
-      <ul>
-        <li>People on dialysis or newly diagnosed with kidney disease</li>
-        <li>Donors who want to understand the whole picture</li>
-        <li>Families who want to help but don’t know how</li>
-        <li>Anyone who needs to see what hope actually looks like in practice</li>
-      </ul>
-    </p>
-
-    <p><strong>Available in paperback and ebook formats.</strong> Visit your favorite bookstore or <a href="https://www.amazon.com/Tito-Needs-Kidney-Resilience-Community-ebook/dp/B0DT1N3FFG/ref=sr_1_1?crid=1ECZEOP06LZ38&dib=eyJ2IjoiMSJ9.RVyTUt1N1C4RDZ7dTkuHWeiO36VldEcWRCXx6LNA6CQrNDDNuptlsqM-XgLZgc5FaPtdlmxJ5SWAGBaE6ru2-lpPHvFM-5YMcbvcM5jPUwE._73g6m4XH6gDtqfMsU_gV8wcaj1d7O0goXTSoXlbfj4&dib_tag=se&keywords=tito+needs+a+kidney&qid=1754048170&sprefix=tito+needs+a+kidney%2Caps%2C81&sr=8-1" target="_blank" rel="noopener">buy on Amazon here</a>.</p>
   </main>
 
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
