--- a/es/donor-testimonials.html
+++ b/es/donor-testimonials.html
@@ -2,22 +2,21 @@
 <html lang="es">
 <head>
   <div data-include="/includes_es/meta.html"></div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Donor Testimonials | Tito Needs a Kidney</title>
-    <!-- Google Fonts: Open Sans -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Testimonios de donantes | Tito Necesita un Riñón</title>
+  <!-- Google Fonts: Open Sans -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
@@ -26,42 +25,43 @@
   <div data-include="/includes_es/header.html"></div>
 
   <main class="content" id="main">
-  <div data-include="/includes_es/testimonial-subnav.html"></div>
+    <div data-include="/includes_es/testimonial-subnav.html"></div>
 
-    <h1>Donor Testimonials</h1>
-    <p>These stories come from people who have walked the path of living donation. Each one offers a different perspective, but they all share the same message: donating a kidney changes lives.</p>
+    <h1>Testimonios de donantes</h1>
+    <p>Estas historias provienen de personas que han recorrido el camino de la donación en vida. Cada una ofrece una perspectiva distinta, pero todas comparten el mismo mensaje: donar un riñón cambia vidas.</p>
 
     <section class="testimonial-summary">
-      <h2><a href="testimonials/donor-luis.html">Luis B.</a></h2>
-      <p>Uncle, donor, and advocate. Luis shares his journey from doubt to determination, through testing and surgery, and what it meant to try — even when the transplant didn’t last. “If I had another kidney to give, I would do it again in a heartbeat.”</p>
+      <h2><a href="/es/testimonials/donor-luis.html">Luis B.</a></h2>
+      <p>Tío, donante y defensor. Luis cuenta su viaje de la duda a la determinación, pasando por las pruebas y la cirugía, y lo que significó intentarlo, incluso cuando el trasplante no duró. “Si tuviera otro riñón para dar, lo haría de nuevo sin dudar”.</p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="testimonials/donor-amy.html">Amy S.</a></h2>
-      <p>A cousin who donated in 2005, Amy reflects on her experience from testing through recovery, motherhood, and ultramarathons. “I have no regrets... and I’d be happy to talk more to anyone considering donating.”</p>
+      <h2><a href="/es/testimonials/donor-amy.html">Amy S.</a></h2>
+      <p>Prima que donó en 2005, Amy reflexiona sobre su experiencia desde las pruebas hasta la recuperación, la maternidad y los ultramaratones. “No me arrepiento… y con gusto hablaría más con cualquiera que esté pensando en donar”.</p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="testimonials/donor-john.html">John G.</a></h2>
-      <p>John donated during the early days of the COVID-19 pandemic after a chance conversation with a coworker. “I would recommend the process to anyone who is able and willing to make a difference in someone’s life.”</p>
+      <h2><a href="/es/testimonials/donor-john.html">John G.</a></h2>
+      <p>John donó durante los primeros días de la pandemia de COVID-19 tras una conversación casual con un compañero de trabajo. “Recomendaría el proceso a cualquiera que pueda y esté dispuesto a marcar una diferencia en la vida de alguien”.</p>
     </section>
 
     <section class="testimonial-summary">
-      <h2><a href="testimonials/donor-nancy.html">Nancy M. Stabins</a></h2>
-      <p>A wine-loving RN and mother who tried — and was disqualified — but still sees the process as worthwhile. “It was worth trying and failing than not trying at all.”</p>
+      <h2><a href="/es/testimonials/donor-nancy.html">Nancy M. Stabins</a></h2>
+      <p>Enfermera (RN) amante del vino y madre que lo intentó —y fue descalificada—, pero que aun así considera que valió la pena. “Valió más intentar y fallar que no intentarlo”.</p>
     </section>
-<div class="callout">
-  <p>
-    💬 <strong>Want to Share Your Story?</strong><br>
-    Reading real stories can change lives. If you’re a kidney donor, recipient, 
-    or caregiver and would like to contribute your experience, we’d love to hear from you.
-    <a href="/es/about.html">Contact Tito</a> to share your story.
-  </p>
-</div>
 
+    <div class="callout">
+      <p>
+        💬 <strong>¿Quieres compartir tu historia?</strong><br>
+        Leer historias reales puede cambiar vidas. Si eres donante, receptor/a
+        o cuidador/a y te gustaría compartir tu experiencia, nos encantaría saber de ti.
+        <a href="/es/about.html">Contacta a Tito</a> para contar tu historia.
+      </p>
+    </div>
   </main>
 
   <div data-include="/includes_es/footer.html"></div>
   <script src="/scripts/analytics.js" defer></script>
 </body>
 </html>
+
