--- a/es/index.html
+++ b/es/index.html
@@ -2,55 +2,52 @@
 <html lang="es">
 <head>
   <div data-include="/includes_es/meta.html"></div>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
-</script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHT0DBJBHH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-JHT0DBJBHH', { transport_type: 'beacon' });
+  </script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tito Needs a Kidney</title>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Tito Necesita un Riñón</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/css/main.css" />
   <script src="/scripts/include.js" defer></script>
   <script src="/scripts/active-link.js" defer></script>
 </head>
 <body>
   <div data-include="/includes_es/header.html"></div>
-  
-  
 
   <main class="content" id="main">
-    <h1>Welcome to Tito Needs a Kidney</h1>
-    <p>This site is a living guide for people dealing with kidney failure, dialysis, transplant, or living donation — built from lived experience, not just theory.</p>
-    
+    <h1>Bienvenido a Tito Necesita un Riñón</h1>
+    <p>Este sitio es una guía viva para personas que enfrentan insuficiencia renal, diálisis, trasplante o donación en vida — construida desde la experiencia vivida, no solo desde la teoría.</p>
+
     <section class="callout">
-  <h2>About Tito</h2>
-  <p>
-    I'm a kidney transplant recipient who has been through dialysis, two transplants,
-    and the long recovery process. This site is my way of sharing what I wish I had known—
-    practical tips, honest stories, and resources for patients, donors, and families.
-  </p>
-  <a href="/es/about.html" class="button">Read My Story</a>
-</section>
+      <h2>Acerca de Tito</h2>
+      <p>
+        Soy receptor de un trasplante de riñón y he pasado por diálisis, dos trasplantes
+        y un largo proceso de recuperación. Este sitio es mi manera de compartir lo que me
+        habría gustado saber: consejos prácticos, historias honestas y recursos para pacientes,
+        donantes y familias.
+      </p>
+      <a href="/es/about.html" class="button">Leer mi historia</a>
+    </section>
 
-
-    <h2>Explore the Topics</h2>
+    <h2>Explora los temas</h2>
     <ul>
-      <li><a href="start-here.html">Start Here</a> — where to begin, especially if you're new</li>
-      <li><a href="book.html">Book: Tito Needs a Kidney</a> — read about the story that started it all</li>
-      <li><a href="donor-info.html">Donor Info</a> — facts and risks for people considering donation</li>
-      <li><a href="/es/hub/dialysis/index.html">Dialysis Hub</a> — how it works, what to expect, and who’s involved</li>
-      <li><a href="/es/hub/transplant/index.html">Transplant Hub</a> — evaluation, surgery, and post-transplant life</li>
+      <li><a href="/es/start-here.html">Comienza aquí</a> — por dónde empezar, especialmente si eres nuevo/a</li>
+      <li><a href="/es/book.html">Libro: Tito Necesita un Riñón</a> — la historia que inició todo</li>
+      <li><a href="/es/donor-info.html">Información para donantes</a> — datos y riesgos para quienes consideran donar</li>
+      <li><a href="/es/hub/dialysis/index.html">Centro de diálisis</a> — cómo funciona, qué esperar y quién participa</li>
+      <li><a href="/es/hub/transplant/index.html">Centro de trasplante</a> — evaluación, cirugía y vida después del trasplante</li>
     </ul>
 
-    <p>Everything here is organized so you don’t have to feel overwhelmed. Take what helps. Leave what doesn’t. Ask for more if something’s missing.</p>
+    <p>Todo aquí está organizado para que no te sientas abrumado/a. Toma lo que te ayude. Deja lo que no. Y si falta algo, házmelo saber.</p>
   </main>
 
   <div data-include="/includes_es/footer.html"></div>
